--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "json-schema-2020-validation",
   "displayName": "JSON Schema Diagnostics",
-  "description": "Validates JSON documents against schemas (draft 2020-12 and later) with live diagnostics in VS Code",
-  "version": "0.0.4",
+  "description": "Validates JSON documents against schemas (up to draft/2020-12) with live diagnostics in VS Code",
+  "version": "0.0.5",
   "publisher": "prosser",
   "repository": {
     "type": "git",
