--- a/server/src/JsonSchemaLanguageServer/JsonSchemaLanguageServer.csproj
+++ b/server/src/JsonSchemaLanguageServer/JsonSchemaLanguageServer.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>Rosser.Extensions.JsonSchemaLanguageServer</RootNamespace>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
