--- a/server/test/JsonSchemaLanguageServerUnitTests/JsonSchemaLanguageServerUnitTests.csproj
+++ b/server/test/JsonSchemaLanguageServerUnitTests/JsonSchemaLanguageServerUnitTests.csproj
@@ -25,6 +25,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="System" />
+    <Using Include="System.Collections.Generic" />
+    <Using Include="System.Diagnostics.CodeAnalysis" />
+    <Using Include="System.IO" />
+    <Using Include="System.Linq" />
+    <Using Include="System.Text" />
+    <Using Include="System.Text.Json" />
+    <Using Include="System.Threading" />
+    <Using Include="System.Threading.Tasks" />
+    <Using Include="Rosser.Extensions.JsonSchemaLanguageServer" />
+    <Using Include="Rosser.Extensions.JsonSchemaLanguageServer.Services" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Content\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
