--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-schema-2020-validation",
   "displayName": "JSON Schema Diagnostics",
   "description": "Validates JSON documents against schemas (up to draft/2020-12) with live diagnostics in VS Code",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "publisher": "prosser",
   "repository": {
     "type": "git",
@@ -62,18 +62,18 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "vscode-languageclient": "^7.0.0"
+    "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
-    "@types/mocha": "^9.0.0",
-    "@types/node": "14.x",
-    "@types/vscode": "^1.61.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "@vscode/test-electron": "^1.6.1",
-    "esbuild": "^0.13.8",
-    "eslint": "^7.32.0",
-    "mocha": "^9.1.1",
-    "typescript": "^4.4.4"
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^24.0.4",
+    "@types/vscode": "^1.101.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@vscode/test-electron": "^2.5.2",
+    "esbuild": "^0.25.5",
+    "eslint": "^9.29.0",
+    "mocha": "^11.7.1",
+    "typescript": "^5.8.3"
   }
 }
