--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "esbuild",
         "outfile",
         "prosser"
-    ]
+    ],
+    "sarif-viewer.connectToGithubCodeScanning": "off"
 }
