--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "onLanguage:json",
     "onLanguage:jsonc"
   ],
-  "main": "./out/extension",
+  "main": "./out/extension.js",
   "contributes": {
     "configuration": {
       "type": "object",
