--- a/.vscodeignore
+++ b/.vscodeignore
@@ -13,3 +13,23 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+**/*.tsx
+**/test/**
+**/tests/**
+**/test
+**/tests
+**/out/test/**
+**/src/**
+**/server/src/**
+**/server/test/**
+**/server/**/obj/**
+**/server/**/bin/**
+.vscode/**
+.git/**
+.github/**
+*.md
+*.yml
+*.yaml
+*.ps1
+*.sh
+*.log
