--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "icon": "icon.png",
   "engines": {
-    "vscode": "^1.61.0"
+    "vscode": "^1.101.0"
   },
   "categories": [
     "Other"
@@ -18,7 +18,7 @@
   "activationEvents": [
     "onLanguage:json"
   ],
-  "main": "./out/extension",
+  "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
       "type": "object",
@@ -51,7 +51,7 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run esbuild-base -- --minify && npm run server-win && npm run server-osx && npm run server-linux",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
     "server-win": "cd server/src/JsonSchemaLanguageServer && dotnet publish /p:PublishProfile=win-x64.pubxml",
     "server-osx": "cd server/src/JsonSchemaLanguageServer && dotnet publish /p:PublishProfile=osx-x64.pubxml",
     "server-linux": "cd server/src/JsonSchemaLanguageServer && dotnet publish /p:PublishProfile=linux-x64.pubxml",
